--- a/codeCertif/categorieAutre.html
+++ b/codeCertif/categorieAutre.html
@@ -75,9 +75,9 @@
 
 </main>
 
-<!--  ici commence  le footer---------------- -->
-
-<footer>
+<!--  ici ---------------- -->
+git <address></address>
+<footer class="footer">
     
     <ul class="footerList1">
         <li><a href="/codeCertif/index.html">Accueil</a></li>
