--- a/codeCertif/categorieSneakers.html
+++ b/codeCertif/categorieSneakers.html
@@ -8,6 +8,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <title>Categorie Sneakers</title>
     <link rel="stylesheet" href="../codeCertif/css/categorieSneakers.css">
+    <link rel="stylesheet" href="/codeCertif/css/modele.css">
 </head>
 
 <body>
@@ -45,7 +46,7 @@
 <main>
     
     <ul class="chemins">
-        <li><a href="../codeCertif/index.html">Accueil /</a></li>
+        <li><a href="../codeCertif/index.html">Accueil </a></li>
         <li><a href="../codeCertif/index.html">Sneakers</a></li>
     </ul>
    
