--- a/codeCertif/panier.html
+++ b/codeCertif/panier.html
@@ -8,6 +8,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <title>Categorie Sneakers</title>
     <link rel="stylesheet" href="css/categorieAutre.css">
+    <link rel="stylesheet" href="/codeCertif/css/modele.css">
 </head>
 
 <body>
