--- a/codeCertif/sousCategorieAutre.html
+++ b/codeCertif/sousCategorieAutre.html
@@ -8,6 +8,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <title>Categorie Sneakers</title>
     <link rel="stylesheet" href="/codeCertif/css/sousCategorieSneakers.css">
+    <link rel="stylesheet" href="/codeCertif/css/modele.css">
 </head>
 
 <body>
@@ -45,8 +46,8 @@
 <main>
     
     <ul class="chemins">
-        <li><a href="/codeCertif/index.html">Accueil /</a></li>
-        <li><a href="/codeCertif/categorieAutre.html">Autres /</a></li>
+        <li><a href="/codeCertif/index.html">Accueil</a></li>
+        <li><a href="/codeCertif/categorieAutre.html">Autres</a></li>
         <li><a href="/codeCertif/sousCategorieAutre.html">produit</a></li>
     </ul>
 
