--- a/codeCertif/sousCategorieSneakers.html
+++ b/codeCertif/sousCategorieSneakers.html
@@ -8,6 +8,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <title>Categorie Sneakers</title>
     <link rel="stylesheet" href="../codeCertif/css/sousCategorieSneakers.css">
+    <link rel="stylesheet" href="/codeCertif/css/modele.css">
 </head>
 
 <body>
@@ -39,14 +40,13 @@
              </ul>
             </nav>
         </div>
-</header>
 
 <!-- main_______________________ -->
 <main>
     
     <ul class="chemins">
-        <li><a href="./index.html">Accueil /</a></li>
-        <li><a href="./categorieSneakers.html">Sneakers /</a></li>
+        <li><a href="./index.html">Accueil </a></li>
+        <li><a href="./categorieSneakers.html">Sneakers </a></li>
         <li><a href="/codeCertif/sousCategorieSneakers.html">Marques</a></li>
     </ul>
 
