--- a/codeCertif/contact.html
+++ b/codeCertif/contact.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <title>Categorie Sneakers</title>
-    <link rel="stylesheet" href="css/categorieAutre.css">
+    <link rel="stylesheet" href="/codeCertif/css/contact.css">
+    <link rel="stylesheet" href="/codeCertif/css/modele.css">
 </head>
 
 <body>
@@ -52,23 +53,19 @@
 
     <ul class="chemins">
         <li><a href="/codeCertif/index.html">Accueil</a></li>
-        <li><a href="/codeCertif/categorieAutre.html">Tshirt</a></li>
+        <li><a href="/codeCertif/categorieAutre.html">Contact</a></li>
     </ul>
-    <h1>Choisissez une marque de sneaker</h1>
-    <div class="carre">
-            <div id="carre1">
-           <a href="/codeCertif/sousCategorieSneakers.html"><img src="/codeCertif/image/nike.png" alt="Nike"></a> 
-            </div>
-            <div id="carre2">
-                <a href="/codeCertif/sousCategorieSneakers.html"><img src="/codeCertif/image/adidas.png" alt="Adidas"></a> 
-            </div>
-            <div id="carre3">
-                <a href="/codeCertif/sousCategorieSneakers.html"><img src="/codeCertif/image/converse.png" alt="Converse"></a>  
-            </div>
-            <div id="carre4">
-                <a href="/codeCertif/sousCategorieSneakers.html"><img src="/codeCertif/image/vans.png" alt="Vans"></a>  
-            </div>
-           
+    <div class="formulaire">
+        <form id="formulaire" action="formulaire">
+            <label for="">Nom</label>
+            <input type="text" placeholder="Entrez votre nom">
+            <label for="">Prénom</label>
+            <input type="text" placeholder="Entrez votre prénom">
+            <label for="">Email</label>
+            <input type="text" placeholder="Entrez votre email">
+            <label for="">Dite nous quelles sont vos besoins</label>
+            <textarea name="" id="textearea" cols="30" rows="10"></textarea>
+        </form>
     </div>
 
  <img id="trait2" src="/codeCertif/image/Line.png" alt="ligne de separation ">
