--- a/codeCertif/produitAutres.html
+++ b/codeCertif/produitAutres.html
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <title>Custom sneakers</title>
 <link rel="stylesheet" href="/code certif/style.css">
+<link rel="stylesheet" href="/codeCertif/css/modele.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
