--- a/codeCertif/contact.html
+++ b/codeCertif/contact.html
@@ -63,8 +63,9 @@
             <input type="text" placeholder="Entrez votre prénom">
             <label for="">Email</label>
             <input type="text" placeholder="Entrez votre email">
-            <label for="">Dite nous quelles sont vos besoins</label>
+            <label for="">Dite nous quels sont vos besoins</label>
             <textarea name="" id="textearea" cols="30" rows="10"></textarea>
+            <button>Envoyer</button>
         </form>
     </div>
 
